crates/uitest/fixtures/ty_check/recv_not_variant_of_msg.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/recv_not_variant_of_msg.fe
---
error[8-0042]: recv arm pattern is not a variant of the msg type
   ┌─ recv_not_variant_of_msg.fe:36:9
   │
36 │         TokenMsg::Transfer { to, amount } -> bool uses () {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected variant of `BankMsg`

error[8-0042]: recv arm pattern is not a variant of the msg type
   ┌─ recv_not_variant_of_msg.fe:41:9
   │
41 │         CustomMsg { data: d } -> bool uses () {
   │         ^^^^^^^^^^^^^^^^^^^^^ expected variant of `BankMsg`

error[8-0045]: recv block missing msg variants
   ┌─ recv_not_variant_of_msg.fe:28:10
   │
28 │     recv BankMsg {
   │          ^^^^^^^ missing variants: Withdraw
